<resources>
    <string name="app_name">HouseRentManage</string>
    <string name="jingxuanfangyun">精选房源</string>
    <string name="fenggesheji">高品质原装风格设计</string>
    <string name="fujinfangyun">附近房源</string>
    <string name="zhengzufangyun">整租房源</string>
    <string name="hezufangyun">合租房源</string>
    <string name="sousuohint">输入你想住的区域或小区</string>

    <string name="shouye">首页</string>
    <string name="zhaofang">找房</string>
    <string name="shezhi">设置</string>
    <string name="wode">我的</string>
    <string name="zufang">租房</string>
    <string name="weizhi">位置</string>
    <string name="zujin">租金</string>
    <string name="shaixuan">筛选</string>
    <string name="jingxuan">精选</string>
    <string name="zhengzu">整租</string>
    <string name="wurenjiudian">无人酒店</string>
    <string name="hezu">合租</string>
    <string name="xiaoxi">消息</string>
    <string name="shoucang">收藏</string>
    <string name="yuekan">约看</string>
    <string name="jingpingfangyuan">精品房源</string>
    <string name="youzhigongyu">优质公寓</string>
    <string name="wenxinhezu">温馨合租的悠闲静谧</string>
    <string name="chengtaochuzu">成套出租的温馨设计</string>
    <string name="buxian">不限</string>
    <string name="yiju">1居</string>
    <string name="erju">2居</string>
    <string name="sanjujia">3居+</string>
    <string name="queren">确认</string>
    <string name="querenxinxi">确认信息</string>
    <string name="morenpaixu">默认排序</string>
    <string name="didaogao">价格从低到高</string>
    <string name="gaodaodi">价格从高到低</string>
    <string name="dadaoxiao">面积从大到小</string>
    <string name="xiaodaoda">面积从小到大</string>
    <string name="dingdan">订单</string>
    <string name="pingjia">评价</string>
    <string name="qianbao">钱包</string>
    <string name="wodejia">我的家</string>
    <string name="zhuanxiangfuwu">专享服务</string>

    <string name="wodehetong">我的合同</string>
    <string name="daijiaozhangdan">待缴账单</string>
    <string name="zaixianyuyue">在线报修</string>
    <string name="yuyuebaojie">预约保洁</string>
    <string name="tousujianyi">投诉建议</string>
    <string name="gerenshezhi">个人设置</string>
    <string name="woyaodangfangdong">我要当房东</string>

    <string name="lianxiwomen">联系我们</string>
    <string name="likechengwei">立刻成为房东</string>
    <string name="ninxuyao">成为房东，您需要</string>
    <string name="yunying">我们的运营支持</string>


    <string name="xianzhi">拥有闲置房源</string>
    <string name="zhuangxiusheji">装修设计</string>
    <string name="shangjiafangyuan">上架房源</string>
    <string name="zhuanqushouyi">赚取收益</string>

    <string name="zhidao">运营技巧指导</string>
    <string name="qudao">多渠道推广</string>
    <string name="tiexinkefu">贴心客服</string>

    <string name="shoucicchuzu">首次出租</string>
    <string name="wifi">wifi覆盖</string>
    <string name="mianwuyefei">免物业费</string>
    <string name="fangyaunxinxi">房源信息</string>
    <string name="peitaosheshi">配套设施</string>
    <string name="fangjianxinxi">房间信息</string>
    <string name="fangyuantese">房源特色</string>

    <string name="fangyualiangdian">房源亮点</string>
    <string name="huxingjieshao">户型介绍</string>
    <string name="zhoubianpeitao">周边配套</string>
    <string name="xiaoquxinxi">小区信息</string>

    <string name="yuyuekjanfang">预约看房</string>
    <string name="lijiqianyue">立即签约</string>

    <string name="yuekantijiao">您的约看已经成功提交！</string>
    <string name="lianxinin">我们将尽快联系您确认看房时间和地点</string>
    <string name="chakanyuekan">查看约看</string>
    <string name="jixuzhaofang">继续找房</string>
    <string name="yuekandingdan">约看订单</string>
    <string name="querenhetong">确认合同</string>

    <string name="fuwfei">服务费</string>
    <string name="zhengjianhao">证件号</string>
    <string name="hetongriqi">合同日期</string>
    <string name="wuyedizhi">物业地址</string>
    <string name="fukuanfangshi">付款方式</string>
    <string name="shouquan">您授权我们以您的本人信息（包括但不限于身份证件号码）对正在签署的合同进行数字签名</string>

    <string name="woqueren">我确认以上信息</string>
    <string name="querenqianding">您确认签订此合同吗</string>
    <string name="quxiao">取消</string>
    <string name="xinxiqueren">信息确认</string>
    <string name="xiayibu">下一步</string>
    <string name="querenfukuanfangshi">确认付款方式</string>

    <string name="shoucikuanxiang">首次款项</string>
    <string name="qianyuezhutixinxi">签约主体信息</string>
    <string name="yingfushoucikuanxiang">应付首次款项</string>

    <string name="yajin">押金</string>
    <string name="yajin1">押金：</string>
    <string name="zufanggongyue">租房公约</string>
    <string name="zizhixinxi">资质信息</string>
    <string name="shouhuzufanggongyue">我同意守护租房公约</string>
    <string name="yue1">所有房源仅限签约本人及最多一名同住人居住</string>
    <string name="yue2">所有房源不支持养宠物</string>
    <string name="yue3">生活费请用户均摊，如合同解约请及时清算</string>
    <string name="yue4">规律作息有益身心，晚上23:00至清晨7:00禁止聚会扰民行为</string>
    <string name="yue5">私人物品放置工区，需靠墙摆放整齐，切面积不超过0.45平米</string>
    <string name="yue6">公共区域请保持卫生整洁，不私自占用，不在公共区域吸烟</string>
    <string name="yue7">请互相尊重，友爱相处，严禁言语辱骂及身体侵害行为</string>
    <string name="yue8">如中途解约，请提前七天申请</string>

    <string name="hangyefangxiang">行业/方向</string>
    <string name="gongsimincheng">公司名称</string>
    <string name="gongsidizhi">公司地址</string>
    <string name="jinjiren">紧急联系人/证明人姓名</string>
    <string name="jinjidianhua">紧急联系人/证明人电话</string>
    <string name="jinjiguanxi">与紧急联系人/证明人关系</string>
    <string name="zhiyerenzheng">职业认证</string>
    <string name="weiyuezeren">所属信息真实有效，，如有虚假，愿意承担违约责任</string>

    <string name="xingming">姓名</string>
    <string name="xingbie">性别</string>
    <string name="shengfenzheng">身份证</string>
    <string name="shoujihao">手机号码</string>

    <string name="fukaunfnagshi">付款方式</string>
    <string name="zhifufangshi">支付方式</string>
    <string name="xuanzezhifu">请选择您支付房租方式</string>
    <string name="yayifuyi">押一付一</string>
    <string name="yayifusan">押一付三</string>
    <string name="yayifuliu">押一付六</string>
    <string name="yayifushier">押一付十二</string>

    <string name="zuqixinxi">租期信息</string>
    <string name="qiehuanfangdong">切换房东</string>
    <string name="zhengzufangyuan">整租房源</string>
    <string name="jingpingfangyaun">精品房源</string>
    <string name="kuaijiefuwu">快捷方便的精品客房服务</string>
    <string name="fukaunfangshi">付款方式</string>
    <string name="yuefu">月付</string>
    <string name="jifu">季付</string>
    <string name="bannainfu">半年付</string>
    <string name="nianfu">年付</string>
    <string name="shuoming">说明</string>
    <string name="shuoming1">1.押金会在您办理解约时一并返还</string>
    <string name="_01">01卧</string>
    <string name="Dairuzhu">待入住</string>
    <string name="chakanfangjian">查看房间</string>
    <string name="chongzhi">重置</string>
    <string name="jianhzuniandia">建筑年代</string>
    <string name="jianzhuleixing">建筑类型</string>
    <string name="lvhualv">绿化率</string>
    <string name="pingfen">综合评分</string>
    <string name="zhoubainsheshi">周边设施</string>
    <string name="jiuliangdain">酒店亮点</string>
    <string name="jiaotongchuxing">交通出行</string>
    <string name="zzhoubianjingdian">周边景点</string>
    <string name="zhoubainjiaotong">周边交通</string>
    <string name="jiudianxinxi">酒店信息</string>
    <string name="ruzhushijian">入住时间</string>
    <string name="likaishijian">离开时间</string>
    <string name="lijiyuding">立即预定</string>
    <string name="mainji">面积</string>
    <string name="cx">床型</string>
    <string name="lc">楼层</string>
    <string name="kd">宽带</string>
    <string name="kz">可住</string>
    <string name="wy">无烟</string>
    <string name="ch">窗户</string>
    <string name="zc">早餐</string>
    <string name="ys">浴室</string>
    <string name="blss">便利设施</string>
    <string name="mtkj">媒体科技</string>
    <string name="ypsp">饮品食品</string>
    <string name="syjg">室外景观</string>
    <string name="qt">其他</string>
    <string name="tebietishi">特别提示</string>
    <string name="jiudianfeiyongzhengce">酒店费用政策</string>
    <string name="zongjia">总价:</string>
    <string name="dingdanxinxi">订单信息</string>
    <string name="ruzhurenxinxi">入住人信息</string>
    <string name="bianjiruzhuren">编辑入住人</string>
    <string name="jiage">价格</string>
    <string name="dingdanzonge">订单总额：</string>
    <string name="ruzhushijianduan">入住时间段</string>
    <string name="ddxq">订单详情</string>
    <string name="zhenshixingming">真实姓名</string>
    <string name="sfzh">身份证号</string>
    <string name="_1000">1000元以下</string>
    <string name="_1000_1055">1000-1500元</string>
    <string name="_1500_2000">1500-2000元</string>
    <string name="_2000_2500">2000-2500元</string>
    <string name="_2500_3000">2500-3000元</string>
    <string name="chaoxiang">房源朝向</string>
    <string name="dong">东</string>
    <string name="nan">南</string>
    <string name="xi">西</string>
    <string name="bei">北</string>
    <string name="sccz">首次出租</string>
    <string name="dw">独立卫生间</string>
    <string name="dy">独立阳台</string>
    <string name="dn">独立供暖</string>
    <string name="fyzb">房源周边</string>
    <string name="ldtj">离地铁近</string>
    <string name="lhlg">绿化率高</string>
    <string name="qysc">签约时长</string>
    <string name="fyzt">房源状态</string>
    <string name="ljrz">可立即入住</string>
    <string name="kyd">可预订</string>
    <string name="paixu">排序</string>
    <string name="gdsx">更多筛选</string>
    <string name="_0_300">￥0 - ￥300</string>
    <string name="jdxj">酒店星级</string>
    <string name="sxj">三星级</string>
    <string name="j">四星级</string>
    <string name="wxj">五星级</string>
    <string name="yysx">应用筛选</string>
    <string name="ljzf">立即支付</string>
    <string name="ddze">订单总额:</string>
    <string name="yj">押金：</string>
    <string name="wdpj">我的评价</string>
    <string name="qjd">清洁度</string>
    <string name="zbhj">周边环境</string>
    <string name="xjb">性价比</string>
    <string name="msxf">描述相符</string>
    <string name="ti">提交</string>
    <string name="sctp">上传图片</string>
    <string name="nmpj">匿名评价</string>
    <string name="xzrzr">选择入住人</string>
    <string name="tjrzr">添加入住人</string>
    <string name="ysrz">选择以上入住人</string>
    <string name="qd">确定</string>
    <string name="txcj">头像采集</string>
    <string name="zsxm">真实姓名</string>
    <string name="zjlx">证件类型</string>
    <string name="lxfs">联系方式</string>
    <string name="yhpj">用户评价</string>
    <string name="dd">地点</string>
    <string name="yzgy">优质公寓</string>
    <string name="hzfy">合租房源</string>
    <string name="_3000_above">3000元以上</string>
    <string name="fycx">房源朝向</string>
    <string name="nanbei">南北</string>
    <string name="fyts">房源特色</string>
    <string name="dlyt">独立阳台</string>
    <string name="dlgn">独立供暖</string>
    <string name="ydt">有电梯</string>
    <string name="nz">年租</string>
    <string name="dz">短租</string>
    <string name="kljrz">可立即入住</string>
    <string name="kyy">可预约</string>


</resources>
