<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/halfalpha"
    android:orientation="vertical"
    >



        <RadioGroup
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >
            <RadioButton
                android:layout_marginTop="@dimen/dp_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Radiopaixu"
                android:text="@string/morenpaixu"
                android:checked="true"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Radiopaixu"
                android:text="@string/didaogao"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Radiopaixu"
                android:text="@string/gaodaodi"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Radiopaixu"
                android:text="@string/dadaoxiao"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Radiopaixu"
                android:text="@string/xiaodaoda"
                android:layout_marginBottom="@dimen/dp_16"
                />
        </RadioGroup>



</LinearLayout>
