<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/halfalpha"
    android:orientation="vertical"
    >

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"

        >

        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hezu"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wenxinhezu"
            android:textColor="@color/colorTextGrey"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_6"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buxian"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yiju"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erju"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanjujia"
                style="@style/Checkbox"

                />

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhengzu"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chengtaochuzu"
            android:textColor="@color/colorTextGrey"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_6"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buxian"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yiju"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erju"
                style="@style/Checkbox"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanjujia"
                style="@style/Checkbox"

                />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_55"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chongzhi"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="@dimen/dp_6"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/shape_btnchongzhi"

                />

            <Button
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/queren"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_6"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape_btnqueding"
                android:textSize="@dimen/sp_16"

                />

        </LinearLayout>

    </LinearLayout>








</LinearLayout>
