<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    >

    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        >
        <RelativeLayout
            android:id="@+id/Realtive_btnPaixutuichu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_12">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jq"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>




    </RelativeLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            style="@style/Radiopaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:checked="true"
            android:text="@string/morenpaixu" />

        <RadioButton
            style="@style/Radiopaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didaogao" />

        <RadioButton
            style="@style/Radiopaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gaodaodi" />

        <RadioButton
            style="@style/Radiopaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dadaoxiao" />

        <RadioButton
            style="@style/Radiopaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/xiaodaoda" />

    </RadioGroup>



</LinearLayout>
