<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    android:background="@drawable/shape_dialogqueren"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/querenhetong"
    android:textColor="@color/colorTextBlack"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginLeft="@dimen/dp_20"
    android:textSize="@dimen/sp_25"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/querenqianding"
        android:textColor="@color/colorTextBlack"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:textSize="@dimen/sp_16"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >

        <TextView
            android:id="@+id/btn_quxiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorJuse"
            android:text="@string/quxiao"

            />
        <TextView
            android:id="@+id/btn_queren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colorJuse"
            android:text="@string/queren"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"

            />

    </LinearLayout>


</LinearLayout>
